fix too big scrolling bar in x-direction

--- a/common/common.scss
+++ b/common/common.scss
@@ -21,6 +21,10 @@
     overflow: auto
 }
 
+.snippet-box-edit .pages {
+    width: fit-content;
+}
+
 .snippet-box-edit .page svg {
     max-height: fit-content;
 }
